Set overflow: hidden to app container to prevent scrollbar on intro animation

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
 #app {
   background: linear-gradient(to bottom, rgb(0, 191, 255), rgb(178, 255, 178));
   box-sizing: border-box;
+  height: 100vh;
   margin: 0;
   background-repeat:no-repeat;
   text-align: center;
@@ -15,6 +16,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 #title {
   position: absolute;
